1999-08-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Add Zone typing to +create:* methods.
	(Swarm): Return Activity with activateIn:

1999-08-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m (java_probe_as_object): New function.

	* VarProbe.[hm], objectbase.h ([VarProbe -probeObject:]): New method.
	Use function above.

	* Probe.[mh], objectbase.h ([Probe -setStringReturnType:,
	-setFloatFormat:, -probeRaw:, -probeAsPointer:, -probeAsInt:,
	-probeAsDouble, -probeAsString:Buffer,
	-probeAsString:Buffer:withFullPrecision:]): Remove placeholders.

	* VarProbe.m ([VarProbe -createEnd]): Use
	swarm_directory_objc_type_for_java_class instead of duplicate code.

	* ProbeMap.m ([ProbeMap -addJavaFields:], [ProbeMap
	-addJavaMethods:]): New methods.
	([ProbeMap -createEnd]): Rewrite to use them.

	* ProbeMap.h: When BUILDING_SWARM and HAVE_JDK, include
	defobj/directory.h and declare -addJava{Fields,Methods}:,

	* CompleteVarMap.m ([CompleteVarMap -createEnd]): Rewrite to use
	addJavaFields.

	* DefaultProbeMap.m ([DefaultProbeMap -createEnd]): Likewise.

	* CompleteProbeMap.m, CompleteVarMap.m, DefaultProbeMap.m,
	ProbeMap.m: Include javavars.h instead of using local
	declarations.  Include <defobj/directory.h> instead of
	"../defobj/directory.h".
	([CompleteProbeMap -createEnd]): Rewrite to use
	addJava{Fields,Methods}:.

1999-08-18  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Probe.h: Don't include local.h.

1999-08-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* probing.m: Use externvardef to declare symbols below.

	* local.h: Use externvar for declaration of symbols below.

	* Probe.h: Include local.h.  Don't declare DefaultString, CharString,
	and IntString.h.

1999-08-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m ([VarProbe
	-probeAsString:Buffer:withFullPrecision:]): Use a display name if
	available.  Don't use getInstanceName.
