@@ -1,3 +1,7 @@
+1999-08-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* objectbase.h: Add VarProbe, MessageProbe, and ProbeMap typing.
+
 1999-08-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* objectbase.h: Add Zone typing to +create:* methods.
